# nexus

./: .gitignore  README.md  requirements.txt  start.py  test.json
communications/: .env  __main__.py  comms.py
core/: .env  __main__.py  core.py
database/: __main__.py  database.py
inference/: __main__.py  inference.py
syntesizer/: speech-syntesis.py
taskmanager/: __main__.py  celery.py  initcelery.py  manager.py
taskmanager/tasks/: .env  weather.py
taskmanager/tasks/chat/: tasks.py
taskmanager/tasks/inference/: tasks.py
taskmanager/tasks/time/: tasks.py
taskmanager/tasks/util/: tasks.py
transcriber/: transcriber.py
util/: location.py  log.py  message.py  pyproject.toml  types.py  weather.py
util/src/nexutil/: config.py  config.toml  database.py  inference.py  location.py  log.py  types.py
