[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "util"
version = "0.0.1"
authors = [
    { name = "elplatypo" },
]
description = "util for nexus"
requires-python = ">=3.7"
classifiers = [
    "programming language :: python :: 3",
    "operating system :: os independent",
]


dependencies = [

]

# [project.optional-dependencies]
# dotenv = ["python-dotenv"]
